# awslambdademo

./: .gitignore  template.yaml
demo/: CMakeLists.txt  README
demo/src/: main.cpp
